build.log
   Compiling proc-macro2 v1.0.106
   Compiling zerocopy v0.8.39
   Compiling getrandom v0.2.17
   Compiling scopeguard v1.2.0
   Compiling siphasher v0.3.11
   Compiling getrandom v0.1.16
   Compiling syn v1.0.109
   Compiling stable_deref_trait v1.2.1
   Compiling proc-macro-hack v0.5.20+deprecated
   Compiling lock_api v0.4.14
   Compiling rand_core v0.6.4
   Compiling phf_shared v0.8.0
   Compiling parking_lot v0.12.5
   Compiling phf_shared v0.10.0
   Compiling getrandom v0.4.1
   Compiling bitflags v2.11.0
   Compiling rand_core v0.5.1
   Compiling serde_json v1.0.149
   Compiling rand_pcg v0.2.1
   Compiling fnv v1.0.7
   Compiling thiserror v1.0.69
   Compiling indexmap v1.9.3
   Compiling ident_case v1.0.1
   Compiling strsim v0.11.1
   Compiling quote v1.0.44
   Compiling syn v2.0.117
   Compiling bitflags v1.3.2
   Compiling objc_exception v0.1.2
   Compiling convert_case v0.4.0
   Compiling simd-adler32 v0.3.8
   Compiling ring v0.17.14
   Compiling malloc_buf v0.0.6
   Compiling byteorder v1.5.0
   Compiling new_debug_unreachable v1.0.6
   Compiling miniz_oxide v0.8.9
   Compiling objc v0.2.7
   Compiling mac v0.1.1
   Compiling base64 v0.22.1
   Compiling precomputed-hash v0.1.1
   Compiling futf v0.1.5
   Compiling flate2 v1.1.9
   Compiling ppv-lite86 v0.2.21
   Compiling core-foundation v0.9.4
   Compiling rand_chacha v0.3.1
   Compiling rand_chacha v0.2.2
   Compiling rand v0.8.5
   Compiling rand v0.7.3
   Compiling aho-corasick v1.1.4
   Compiling synstructure v0.13.2
   Compiling phf_generator v0.11.3
   Compiling string_cache_codegen v0.5.4
   Compiling phf_generator v0.8.0
   Compiling phf_generator v0.10.0
   Compiling phf_codegen v0.10.0
   Compiling phf_codegen v0.8.0
   Compiling darling_core v0.21.3
   Compiling markup5ever v0.11.0
   Compiling selectors v0.22.0
   Compiling phf_codegen v0.11.3
   Compiling objc2 v0.6.3
   Compiling cssparser v0.27.2
   Compiling phf_macros v0.8.0
   Compiling html5ever v0.26.0
   Compiling serde_derive v1.0.228
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling zerofrom v0.1.6
   Compiling tracing-attributes v0.1.31
   Compiling yoke v0.8.1
   Compiling tokio-macros v2.6.0
   Compiling cssparser-macros v0.6.1
   Compiling futures-macro v0.3.32
   Compiling zerovec v0.11.5
   Compiling zerotrie v0.2.3
   Compiling tinystr v0.8.2
   Compiling tokio v1.49.0
   Compiling potential_utf v0.1.4
   Compiling serde v1.0.228
   Compiling icu_locale_core v2.1.1
   Compiling icu_collections v2.1.1
   Compiling tracing v0.1.44
   Compiling futures-util v0.3.32
   Compiling phf_macros v0.11.3
   Compiling icu_provider v2.1.1
   Compiling thiserror-impl v1.0.69
   Compiling icu_properties v2.1.2
   Compiling icu_normalizer v2.1.1
   Compiling string_cache v0.8.9
   Compiling idna_adapter v1.2.1
   Compiling idna v1.1.0
   Compiling darling_macro v0.21.3
   Compiling derive_more v0.99.20
   Compiling url v2.5.8
   Compiling darling v0.21.3
   Compiling phf v0.11.3
   Compiling serde_with_macros v3.17.0
   Compiling thiserror-impl v2.0.18
   Compiling dtoa v1.0.11
   Compiling utf-8 v0.7.6
   Compiling block v0.1.6
   Compiling tendril v0.4.3
   Compiling regex-automata v0.4.14
   Compiling time v0.3.47
   Compiling dtoa-short v0.3.5
   Compiling rustls v0.23.37
   Compiling tokio-util v0.7.18
   Compiling phf v0.8.0
   Compiling rustls-webpki v0.103.9
   Compiling ctor v0.2.9
   Compiling zstd-sys v2.0.16+zstd.1.5.7
   Compiling core-graphics-types v0.1.3
   Compiling phf v0.10.1
   Compiling crc32fast v1.5.0
   Compiling itoa v0.4.8
   Compiling adler2 v2.0.1
   Compiling foreign-types-shared v0.1.1
   Compiling nodrop v0.1.14
   Compiling matches v0.1.10
   Compiling alloc-no-stdlib v2.0.4
   Compiling objc2-encode v4.1.0
   Compiling derive_more-impl v2.1.1
   Compiling servo_arc v0.1.1
   Compiling alloc-stdlib v0.2.2
   Compiling foreign-types v0.3.2
   Compiling uuid v1.21.0
   Compiling fxhash v0.2.1
   Compiling hashbrown v0.12.3
   Compiling powerfmt v0.2.0
   Compiling same-file v1.0.6
   Compiling rustix v1.1.4
   Compiling thin-slice v0.1.1
   Compiling raw-window-handle v0.5.2
   Compiling derive_more v2.1.1
   Compiling deranged v0.5.8
   Compiling walkdir v2.5.0
   Compiling serde_urlencoded v0.7.1
   Compiling thiserror v2.0.18
   Compiling cfb v0.7.3
   Compiling core-graphics v0.22.3
   Compiling brotli-decompressor v4.0.3
   Compiling cocoa-foundation v0.1.2
   Compiling jsonptr v0.4.7
   Compiling either v1.15.0
   Compiling fdeflate v0.3.7
   Compiling web_atoms v0.1.3
   Compiling objc_id v0.1.1
   Compiling libsqlite3-sys v0.30.1
   Compiling tao v0.16.10
   Compiling regex-syntax v0.8.10
   Compiling dispatch v0.2.0
   Compiling brotli v7.0.0
   Compiling h2 v0.4.13
   Compiling png v0.17.16
   Compiling sqlx-core v0.8.6
   Compiling json-patch v2.0.0
   Compiling cocoa v0.24.1
   Compiling infer v0.13.0
   Compiling kuchikiki v0.8.2
   Compiling block2 v0.6.2
   Compiling objc2-core-foundation v0.3.2
   Compiling regex v1.12.3
   Compiling actix-rt v2.11.0
   Compiling serde_with v3.17.0
   Compiling crossbeam-channel v0.5.15
   Compiling quick-xml v0.38.4
   Compiling semver v1.0.27
   Compiling mac-notification-sys v0.6.9
   Compiling instant v0.1.13
   Compiling glob v0.3.3
   Compiling fastrand v2.3.0
   Compiling dunce v1.0.5
   Compiling wry v0.24.11
   Compiling lazy_static v1.5.0
   Compiling tauri-runtime v0.14.6
   Compiling tauri-utils v1.6.2
   Compiling actix-router v0.5.4
   Compiling hyper v1.8.1
   Compiling plist v1.8.0
   Compiling sqlx-sqlite v0.8.6
   Compiling objc2-foundation v0.3.2
   Compiling ico v0.4.0
   Compiling actix-codec v0.5.2
   Compiling zstd-safe v7.2.4
   Compiling h2 v0.3.27
   Compiling zstd v0.13.3
   Compiling tokio-stream v0.1.18
   Compiling selectors v0.31.0
   Compiling crossbeam-epoch v0.9.18
   Compiling futures-intrusive v0.5.0
   Compiling spin v0.9.8
   Compiling bstr v1.12.1
   Compiling tauri-runtime-wry v0.14.11
   Compiling anyhow v1.0.102
   Compiling base64 v0.21.7
   Compiling rfd v0.10.0
   Compiling tower v0.5.3
   Compiling tauri-codegen v1.4.6
   Compiling globset v0.4.18
   Compiling sqlx-macros-core v0.8.6
   Compiling hyper-util v0.1.20
   Compiling actix-http v3.12.0
   Compiling actix-server v2.6.0
   Compiling flume v0.11.1
   Compiling crossbeam-deque v0.8.6
   Compiling markup5ever v0.35.0
   Compiling cookie v0.16.2
   Compiling actix-web-codegen v4.3.0
   Compiling futures-lite v2.6.1
   Compiling xattr v1.6.1
   Compiling objc-foundation v0.1.1
   Compiling tokio-rustls v0.26.4
   Compiling tauri v1.8.3
   Compiling futures-executor v0.3.32
   Compiling cssparser v0.35.0
   Compiling serialize-to-javascript-impl v0.1.2
   Compiling actix-macros v0.2.4
   Compiling match_token v0.35.0
   Compiling filetime v0.2.27
   Compiling dirs-sys-next v0.1.2
   Compiling pathdiff v0.2.3
   Compiling tower-http v0.6.8
   Compiling actix-web v4.13.0
   Compiling open v3.2.0
   Compiling dirs-next v2.0.0
   Compiling tar v0.4.44
   Compiling html5ever v0.35.0
   Compiling serialize-to-javascript v0.1.2
   Compiling hyper-rustls v0.27.7
   Compiling notify-rust v4.12.0
   Compiling ignore v0.4.25
   Compiling tauri-macros v1.4.7
   Compiling sqlx-macros v0.8.6
   Compiling tempfile v3.26.0
   Compiling serde_repr v0.1.20
   Compiling gas-price v0.1.0 (/Users/stormer/study/gas-price)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tauri_build`
 --> build.rs:4:5
  |
4 |     tauri_build::build()
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `tauri_build`
  |
  = help: if you wanted to use a crate named `tauri_build`, use `cargo add tauri_build` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `gas-price` (build script) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
       Error failed to build app: failed to build app
